--- a/HeadacheCDSSWeb/Views/Diagnosis/Index.cshtml
+++ b/HeadacheCDSSWeb/Views/Diagnosis/Index.cshtml
@@ -233,24 +233,19 @@ $("#submenu").hide();
                              var OCX = document.getElementById('Reporter2');
                               $(".demo").html("本次问诊信息保存成功！稍候将自动退出");     
                                var userName = "@ViewBag.UserName";
-                                $.ajax({
-                                    url: '@Url.Action("returnSearch", "ViewPatRecord")',
-                                    data: { userName: userName },
-                                    type: "POST",
-                                    traditional: true,
-                                    success: function (data) {
-                                        if (data.OK) {
-                                            if (data.Message == "region") {
-                                                var t = setTimeout("  window.location.href = '@Url.Action("Index", "Region")'", 300);
-                                            } 
-                                            else { 
-                                                var t = setTimeout("  window.location.href = '@Url.Action("Index", "EnterPatInfor")'", 300);
-                                                }
-                                        } else {
-                                                alert("Error '" + data.Message);
-                                        }
-                                    }
-                                });                        
+                                var userType = "@ViewBag.userType";
+                                if (userType == "administrator") {
+                                    var t = setTimeout("  window.location.href = '@Url.Action("Index", "Nation")'", 30);
+                                } 
+                                else if (userType == "region") {
+                                    var t = setTimeout("  window.location.href = '@Url.Action("Index", "Region")'", 30);
+                                } 
+                                else if(userType=="doctor") { 
+                                    var t = setTimeout("  window.location.href = '@Url.Action("Index", "EnterPatInfor")'", 30);
+                                }else{
+                                    var t = setTimeout("  window.location.href = '@Url.Action("Index", "DAccount")'", 30);
+                                }    
+                                              
                             }
                             else {
                            // debugger;
