--- a/HeadacheCDSSWeb/Views/Shared/Regionview.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/Regionview.cshtml
@@ -23,6 +23,8 @@
     <link href="@Url.Content("~/Content/bootstrap/bootstrap.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery.json-2.4.min.js")" type="text/javascript"></script>
 <!--    <script src="@Url.Content("~/Scripts/plugins/modal.js")"type="text/javascript"></script> -->
+    <script src="@Url.Content("~/Scripts/wbox.js")" type="text/javascript"></script>
+        <link href="@Url.Content("~/Content/wbox-min.css")" rel="stylesheet" type="text/css" />
     
    
 </head>
