--- a/HeadacheCDSSWeb/Views/Shared/RecordViewLayout.cshtml
+++ b/HeadacheCDSSWeb/Views/Shared/RecordViewLayout.cshtml
@@ -35,7 +35,7 @@
     <div id="wrapper">
         <!-- start header -->
         <div id="header">
-            @Html.ActionLink("退出登录", "index", "DAccount")
+            <text>欢迎 <strong>@ViewBag.userName</strong>![ @Html.ActionLink("注销", "index", "DAccount") ]</text>
         </div>
         <div class="clear ">
         </div>
